Ajout de 2 classes de tests, ainsi que modification de certaines classes pour que les tests soient justes